log/build_2026-06-15_07-04-00/line_follower_controller/stdout_stderr.log
[ 25%] Building CXX object CMakeFiles/line_follower_controller_node.dir/src/PidController.cpp.o
/home/lucifer/anscer_workspace/LineFollower/src/line_follower_controller/src/PidController.cpp: In member function ‘void line_follower::PidController::tagIdCallback(std_msgs::msg::String_<std::allocator<void> >::SharedPtr)’:
/home/lucifer/anscer_workspace/LineFollower/src/line_follower_controller/src/PidController.cpp:349:31: error: conversion from ‘size_t’ {aka ‘long unsigned int’} to ‘int’ may change value [-Werror=conversion]
  349 |                     tag_idx = i;
      |                               ^
cc1plus: all warnings being treated as errors
gmake[2]: *** [CMakeFiles/line_follower_controller_node.dir/build.make:76: CMakeFiles/line_follower_controller_node.dir/src/PidController.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/line_follower_controller_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
